@@ -1,3 +1,4 @@
+* Add test for all field methods
 * Load po files also in 'override' subdirectory
 * Add support for float and integer on Property fields
 * Remove foreign-key on create_uid and write_uid
